fix gitingore bug hiding tests