@@ -4,6 +4,7 @@ plugins {
 //    pulls the correct platform dependent native libraries onto the classpath path
     id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'org.beryx.jlink' version '2.24.0'
 }
 
 group = 'io.github.vincemann'
@@ -11,6 +12,7 @@ version = '1.1.0'
 
 
 application {
+    mainModule = 'io.github.vincemann.subtitlebuddy'
     mainClass = 'io.github.vincemann.subtitlebuddy.Main'
 }
 
@@ -44,7 +46,20 @@ test {
                 // or windows does not recognize, thats why I need to manually ship the native javafx sdk with it
                 // and setup the module path in testing and when running the fat jar on windows
                 '--module-path', "${projectDir}/test/win/lib/javafx-sdk/lib",
+                //                resolve some issues with javafx and testfx
+                '--add-reads', 'org.apache.commons.configuration2=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+                '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
+
         ]
+    }
+}
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'appLauncher'
+        mainClass = application.mainClass.get()
     }
 }
 
@@ -192,6 +207,7 @@ java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
+    modularity.inferModulePath.set(true)
 }
 
 shadowJar {
@@ -231,7 +247,11 @@ run {
 dependencies {
 
     // capture mouse and keyboard events
-    implementation 'com.1stleg:jnativehook:2.0.2'
+//    implementation 'com.1stleg:jnativehook:2.0.2'
+    // need to use old version bc of segfaults on linux + keyboard strokes not working
+    // needed to self modularize the jar in order to include for whatever reason + this way I can build a custom jlink image
+    // bc cant use automatic modules in jlink
+    implementation files('lib/jnativehook-2.0.2-patched.jar')
 
     // dependency injection
     implementation('com.google.inject:guice:7.0.0')
